<resources>
    <!--底部导航栏标题-->
    <string name="app_name">掌上青协</string>
    <string name="title_home">首页</string>
    <string name="title_me">我</string>
    <string name="title_favourite">收藏</string>
    <string name="title_group">群组</string>
    <string name="title_work">工作</string>
    <string name="title_history">操作历史</string>

    <!--登录界面-->
    <string name="hint_login_name">请输入账号</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="button_text_login">登录</string>

    <string name="worker_release_work">青协推文</string>
    <string name="worker_manage_work_time">工时信息管理</string>

    <string name="hello_blank_fragment">页面加载失败</string>
    <string name="worker_manage_vol_activity">志愿活动管理</string>
    <string name="title_activity_new_message_settings">Settings</string>

    <string name="activity_homeImage">首页图片</string>
    <string name="activity_title">活动主题</string>
    <string name="activity_sponsor">举办单位</string>
    <string name="activity_participant">面向对象</string>
    <string name="activity_place">活动地点</string>
    <string name="activity_general">活动概况</string>
    <string name="activity_description">活动详情</string>
    <string name="activity_hours">活动工时</string>
    <string name="activity_people">需要参与人数</string>
    <string name="activity_people_requirement">志愿者要求</string>
    <string name="activity_regEnd_time">报名截止时间</string>

    <!--系统设置-->
    <string name="system_setting_title">系统设置</string>
    <string name="system_setting_logout">注销</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>


</resources>
